@@ -1,1 +1,1 @@
-DIST vislcg3-0.9.8.10063.tar.bz2 255724 SHA256 82cd9c77c18e5758cf55138ff00b3675940f33a52cde17f79c3ea963c42a07d8 SHA512 e883a33f80892c1845e9d415702a273c8669b3c7bab3ab039d6fa56d309c39fd4a78974cae9dd014787c706e27bcde11b8700260722046906e5168f48ddbc73d WHIRLPOOL fd32ec7f5cec795c969a3a6abeac38c9c5df572467bbe612f9b013b1478995e9fbce706517a9c85a097cda2d03a3b57b0dc8d076a81ac32752cb2e7b35975717
+DIST cg3-0.9.9~r10800.tar.bz2 265674 SHA256 c85446c671fdb55dc01bf6092dd32ccb05ad4e057563d5c4293ee2409df610ba SHA512 4d7ac7debb55642204eb6099228977064791dd9712056a02104538d1603a6308cd1ad2eb02e28b3f25f9b1442578b841a7cdacdf13fb2dcaa6472c544a7ae1b5 WHIRLPOOL 160f96a0737e3ed12880c3d0ec25be64a91abb5892039b430583b42622293a90934149ca675e33fd8c9240bfd13ccdea46312692386979aec95ff9ac90cf3e02
